# codfish

./: .clang-format  .clang-tidy  .gitignore  AUTHORS  CMakeLists.txt  Cargo.toml  Doxyfile  LICENSE  README.md  game.pgn
.github/workflows/: cmake.yml
ai/: Pipfile  README.md  game.py  main.py
app/: CMakeLists.txt  main.cpp
apps/: CMakeLists.txt  opts.cpp  opts.hpp  utils.hpp
apps/codfish-cli/: cli.cpp
apps/codfish-cli/commands/: captures.cpp  dividedperft.cpp  exit.cpp  info.cpp  magics.cpp  moves.cpp
apps/codfish-uci/: uci.cpp
apps/codfish-uci/commands/: commands.hpp  exit.cpp  go.cpp  position.cpp
apps/codifsh/cli/commands/: dividedperft.cpp  move.cpp
apps/codifsh/uci/commands/: position.cpp  uci.cpp
apps/examples/minimal/: CMakeLists.txt  main.cpp
apps/examples/python/: main.py
apps/examples/simple/: CMakeLists.txt  main.cpp
apps/interfaces/: utils.hpp
apps/interfaces/cli/: cli.cpp
apps/interfaces/cli/commands/: captures.cpp  dividedperft.cpp  eval.cpp  exit.cpp  info.cpp  magics.cpp  move.cpp  moves.cpp  perft.cpp  plmoves.cpp
apps/interfaces/uci/: timectl.cpp  uci.cpp
apps/interfaces/uci/commands/: commands.hpp  exit.cpp  go.cpp  position.cpp
apps/movepicker/: eval.cpp  eval.hpp  histtable.cpp  histtable.hpp  movepicker.cpp  movepicker.hpp  pvtable.cpp  pvtable.hpp  ttable.hpp
benchmarks/codchess/: CMakeLists.txt  bench_perft.cpp
chess/docs/examples/simple/: CMakeLists.txt
codbrain/: CMakeLists.txt
codbrain/benchmarks/: TODO.md
codbrain/docs/: CMakeLists.txt
codbrain/docs/examples/simple/: main.cpp
codbrain/examples/: TODO.md
codbrain/examples/simple/: CMakeLists.txt  main.cpp
codbrain/include/codbrain/: brain.hpp  codbrain.hpp  eval.hpp  histmoves.hpp  history.hpp  histtable.hpp  killertable.hpp  pvtable.hpp  ttable.hpp  uci.hpp
codbrain/src/: CMakeLists.txt  brain.cpp  codbrain.cpp  eval.cpp  mcts.cpp  pvtable.cpp  ttable.cpp  uci.hpp
codbrain/test/: test_codbrain.cpp
codbrain/tests/: test_codbrain.cpp
codbrain/tests/unit/: test_codbrain.cpp
codchess/: CMakeLists.txt
codchess/benchmark/: CMakeLists.txt  bench_codchess.cpp  bench_perft.cpp
codchess/benchmarks/: CMakeLists.txt  bench_codchess.cpp  bench_perft.cpp
codchess/docs/: CMakeLists.txt
codchess/docs/examples/simple/: main.cpp
codchess/examples/simple/: CMakeLists.txt  main.cpp
codchess/include/codchess/: base.hpp  bitboard.hpp  board.hpp  codchess.hpp  move.hpp  movegen.hpp  perft.hpp  utils.hpp
codchess/profile/: CMakeLists.txt  profile_codchess.cpp  profile_codchess_perft_copy.cpp  profile_codchess_perft_unmake.cpp
codchess/src/: CMakeLists.txt  attacks.cpp  attacks.hpp  bitboard.cpp  board.cpp  codchess.cpp  display.hpp  magics.cpp  magics.hpp  move.cpp  movegen.cpp  perft.cpp  utils.cpp  zobrist.cpp  zobrist.hpp
codchess/src/movegen/: attacks.cpp  magics.cpp
codchess/test/: test_board.cpp  test_move.cpp  test_perft.cpp
codchess/tests/: test_board.cpp  test_move.cpp
codchess/tests/bench/: bench_perft.cpp
codchess/tests/bench/profiling/: profile_codchess_perft_copy.cpp  profile_codchess_perft_unmake.cpp
codchess/tests/unit/: test_board.cpp  test_perft.cpp
codfish/: CMakeLists.txt
codfish/app/: CMakeLists.txt  main.cpp  uci.hpp
codfish/docs/: CMakeLists.txt
codfish/include/codfish/: cli.hpp  repl.hpp  uci.hpp
codfish/src/: CMakeLists.txt  Cli.cpp  Cli.hpp  Main.cpp  Uci.hpp  Utils.hpp  cli.hpp  main.cpp  repl.hpp  time.hpp  uci.cpp  uci.hpp
codfish/src-old/: main.cpp  utils.hpp
codfish/src-old/cli/: cli.cpp  cli.hpp
codfish/src-old/cli/commands/: ascii.cpp  captures.cpp  commands.hpp  display.cpp  dividedperft.cpp  eval.cpp  exit.cpp  getfen.cpp  help.cpp  info.cpp  magics.cpp  move.cpp  moves.cpp  new.cpp  perft.cpp  plmoves.cpp  rotate.cpp
codfish/src-old/uci/commands/: display.cpp
codfish/src/uci/: timectl.cpp
codfish/src/uci/commands/: commands.hpp
codfish/test/: test_codfish.cpp
codfish/tests/: CMakeLists.txt  test_uci.cpp
codifsh/: CMakeLists.txt
docs/: CMakeLists.txt
include/: README.md
libs/: CMakeLists.txt
libs/brain/src/: CMakeLists.txt  brain.cpp  mcts.cpp
libs/core/tests/bench/: CMakeLists.txt  bench_perft.cpp
libs/core/tests/bench/profiling/: CMakeLists.txt  profile_codchess_perft_copy.cpp  profile_codchess_perft_unmake.cpp
libs/uci/src/: CMakeLists.txt
src/: CMakeLists.txt  ai.cc  ai.cpp  ai.h  ai.hpp  attacks.cc  attacks.cpp  attacks.h  attacks.hpp  bit.rs  bitboard.cc  bitboard.cpp  bitboard.h  bitboard.hpp  board.cc  board.cpp  board.h  board.hpp  board.rs  cli.cc  cli.cpp  cli.h  cli.hpp  commands.cpp  core.rs  defs.hpp  eval.cc  eval.cpp  eval.h  eval.hpp  evaluation.cpp  evaluation.hpp  lib.rs  magics.cc  magics.cpp  magics.h  magics.hpp  main.cc  main.cpp  mov.rs  (+27 more)
src/codchess/: CMakeLists.txt  bitboard.cpp  bitboard.hpp  board.cpp  codchess.cpp  codlib.cpp  display.hpp  move.cpp  utils.hpp  zobrist.cpp  zobrist.hpp
src/codchess/movegen/: attacks.cpp  attacks.hpp  magics.cpp  magics.hpp  movegen.cpp  perft.cpp
src/codlib/: CMakeLists.txt  bitboard.cpp  bitboard.hpp  board.cpp  codlib.cpp  display.hpp  move.cpp  utils.hpp  zobrist.cpp  zobrist.hpp
src/codlib/movegen/: attacks.cpp  attacks.hpp  magics.cpp  magics.hpp  movegen.cpp  perft.cpp  perft.hpp  tables.cpp
src/codlib/movepicker/: ttable.cpp
tests/: CMakeLists.txt  board_tests.cpp  catch.h  main.cpp  move_generation.txt  perft_tests.cpp  tables_tests.cpp  test_ai.cc  test_ai.cpp  test_board.cc  test_board.cpp  test_move.cpp  test_movegen.cpp  test_movepicker.cpp  test_perft.cc  test_perft.cpp  test_tables.cc  test_tables.cpp  test_unmake.cpp  test_zobrist.cpp  testboard.cpp
tests/codbrain/: CMakeLists.txt  movepicker.cpp  test_codbrain.cpp
tests/codchess/: CMakeLists.txt  board.cpp  move.cpp  perft.cpp  tables.cpp  test_board.cpp  test_perft.cpp  zobrist.cpp
tests/disabled/: test_movepicker.cpp  test_tables.cpp  test_zobrist.cpp
tests/movegen/: test_board.cpp  test_move.cpp  test_perft.cpp  test_tables.cpp  test_unmake.cpp
tests/movepicker/: test_movepicker.cpp  test_zobrist.cpp
(+300 files in other folders)
